fixes mobile header gap, limits logo size on homepage

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem 0.5rem;
     display: flex;
     align-items: center;
     column-gap: 1rem;
@@ -41,6 +41,10 @@
 }
 
 @media screen and (min-width: 600px) {
+    .header {
+        padding: 1rem 2rem;
+    }
+
     .menu-button {
         font-size: 2rem;
     }
