--- a/src/components/common/ReactDropdown.css
+++ b/src/components/common/ReactDropdown.css
@@ -3,7 +3,7 @@
     border: 2px solid var(--color-primary-dark);
     width: 100%;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .react-dd:hover,
@@ -59,4 +59,10 @@
 .react-dd-option:active {
     background-color: var(--color-primary-dark);
     color: white;
+}
+
+@media screen and (min-width: 600px) {
+    .react-dd {
+        font-size: 1rem;
+    }
 }
